# Color-Quantizer-GUI

./: LICENSE  README.md
app/gui_color_quantizer/_internal/numpy-2.3.5.dist-info/: RECORD
app/gui_color_quantizer/_internal/wheel-0.43.0.dist-info/: RECORD
source/: pyproject.toml  requirements.txt
source/assets/examples/: README.md
source/references/: plot_color_quantization_reference.py
source/src/: launcher.py
source/src/color_quantizer_gui/: __init__.py  __main__.py  app.py  core.py
